 * virt:
 	- rework container detection logic;
 * man:
 	- add link to Open Group Base Specifications;
 	- add missing archs to ConditionArchitecture= description;
 	- chroot jails are no longer detected by ConditionVirtualization=;
 	- remove machine-info page;
 	- mention XDG_DATA_HOME in systemd.unit;
 * tests:
 	- remove test-ring test;
 * rules:
 	- consistently use "?*" instead of "*?";
 	- uaccess - add ID_SOFTWARE_RADIO;
 * build:
 	- do not distribute generated emergency.service;
 * bugfix:
 	- fix add comma when removed option is in the middle(fstab-generator);
 	- fix format string for usec_t type(generator);
 	- fix oneshot service resource control;
 	- use the default RestartSec for serial getty services;
 * remove nss-myhostname support;
 * remove systemd-tty-ask-password-agent program;

   systemd (214.7)
~~~~~~~
 * core:
    - redirect stdout to syslog by default;
    - remove EXEC_OUTPUT_JOURNAL type output;
    - honour rd.systemd.unit= only in the initrd, not the host;
    - clean-up signal reset logic when reexec;
    - log info when snapshots are created and removed;
    - make sure Environment fields passed in for transient units are properly written to unit files;
    - rework messages during shutdown;
    - use correct format string for UIDs;
    - don't require cgroups xattr support;
    - name the stamp file consistently;
    - remove x-systemd-device.timeout handling;
    - introduce new RestartForceExitStatus= service setting;
    - add exit_status_set_is_empty function;
    - fix uninitialized memory access;
    - make sure /tmp, /var/tmp and /dev are writable in namespaces we set up;
 * libsystemd:
    - drop bus/message GC logic;
    - when an event loop terminates, explicitly close the bus;
    - close a bus that failed to connect;
 * logind:
    - rename pam_systemd source file to match the module;
    - replace regex with pam_systemd sym file;
    - use the same code for verfiying machine names everywhere;
 * units: